--- a/Analisi_Dataset_e_Preprocessing.ipynb
+++ b/Analisi_Dataset_e_Preprocessing.ipynb
@@ -28,7 +28,7 @@
       "source": [
         "<p style=\"font-size:4px;\" align=\"justify\">In questo notebook viene svolta in primo luogo l'analisi dei dati composto dalla sola prima run (\"basale, occhi aperti\", escludendo le annotazioni dei file edf.event) del dataset \"EEG Motor Movement/Imagery\". È possibile trovare informazioni dettagliate riguardo il dataset originale al seguente <a href=\"https://physionet.org/content/eegmmidb/1.0.0/\">link</a>.</p>\n",
         "<p style=\"font-size:4px;\" align=\"justify\">Oltre che poter osservare gli elementi principali, è possibile svolgere delle analisi specifiche a relativi campioni e volontari.</p>\n",
-        "<p style=\"font-size:4px;\" align=\"justify\">Successivamente viene impostata una fase di pre-processing basata sulle analisi effettuate e l'utilizzo di tecniche comuni. E' possibile salvare i dati pre-eleborati in dei file npy per permetterne l'utilizzo nei classificatori esposti negli altri notebooks di \"EEG Recognition\"</p>"
+        "<p style=\"font-size:4px;\" align=\"justify\">Successivamente viene impostata una fase di pre-processing basata sulle analisi effettuate e l'utilizzo di tecniche comuni. E' possibile salvare i dati pre-eleborati in dei file .npy per permettere il successivo utilizzo nei classificatori esposti negli altri notebooks di \"EEG Recognition\"</p>"
       ]
     },
     {
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "gk46T_kQVNaj"
       },
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "MJBltQXPmXAD"
       },
@@ -112,13 +112,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ALBNMDMymhK7",
-        "outputId": "e51cad26-e578-4277-abdc-37486bb31211"
+        "outputId": "46e2f035-771b-468b-b0f4-0a96a5a3c7e4"
       },
       "outputs": [
         {
@@ -145,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "Lez481oNm5Lm"
       },
@@ -162,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "H5d-7KgaqsqQ"
       },
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "RQOIZLr-sI76"
       },
@@ -197,13 +197,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RU9KJSFBscEf",
-        "outputId": "6308a0cd-61e1-4cee-b419-586406f8065d"
+        "outputId": "7250ddaf-b57f-43ab-d836-13b80b492edb"
       },
       "outputs": [
         {
@@ -212,9 +212,9 @@
           "text": [
             "Downloading...\n",
             "From (original): https://drive.google.com/uc?id=1WwuAh25Jfx-I8rY3vFGyXiI79YfLYUpH\n",
-            "From (redirected): https://drive.google.com/uc?id=1WwuAh25Jfx-I8rY3vFGyXiI79YfLYUpH&confirm=t&uuid=ceaedad1-4bbe-465f-8778-c11fda587818\n",
+            "From (redirected): https://drive.google.com/uc?id=1WwuAh25Jfx-I8rY3vFGyXiI79YfLYUpH&confirm=t&uuid=c1208ed2-7aa5-4d8e-9d60-c089b355c4fb\n",
             "To: /content/EEG_Motor_Movement-Imagery_R01.zip\n",
-            "100%|██████████| 76.6M/76.6M [00:01<00:00, 42.3MB/s]"
+            "100%|██████████| 76.6M/76.6M [00:02<00:00, 27.4MB/s]"
           ]
         },
         {
@@ -255,7 +255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "0_MrmgwXs_Eg"
       },
@@ -289,14 +289,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
         },
         "id": "wRPpi5B2UgEs",
-        "outputId": "d7562f0e-cd7d-4393-b1dc-be7dfb07ddf8"
+        "outputId": "493d15db-41a8-49b6-e22c-f678044eac53"
       },
       "outputs": [
         {
@@ -333,7 +333,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-977a97fc-1f99-4995-ba8e-c8cf87e57559\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a48afc77-e531-4e55-bdf0-fc0d4fbe37d8\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -455,7 +455,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-977a97fc-1f99-4995-ba8e-c8cf87e57559')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a48afc77-e531-4e55-bdf0-fc0d4fbe37d8')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -507,12 +507,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-977a97fc-1f99-4995-ba8e-c8cf87e57559 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a48afc77-e531-4e55-bdf0-fc0d4fbe37d8 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-977a97fc-1f99-4995-ba8e-c8cf87e57559');\n",
+              "        const element = document.querySelector('#df-a48afc77-e531-4e55-bdf0-fc0d4fbe37d8');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -532,8 +532,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-b760e6bc-79b2-4249-934c-bb01647e6dae\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b760e6bc-79b2-4249-934c-bb01647e6dae')\"\n",
+              "<div id=\"df-a30d52c5-d1ee-4794-8b58-3f1ca835d6f8\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a30d52c5-d1ee-4794-8b58-3f1ca835d6f8')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -652,14 +652,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-b760e6bc-79b2-4249-934c-bb01647e6dae button');\n",
+              "        document.querySelector('#df-a30d52c5-d1ee-4794-8b58-3f1ca835d6f8 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_0e8b8d7e-4c2c-4914-86fe-702aec28d013\">\n",
+              "  <div id=\"id_c1d4638e-b61a-4c38-8067-6b1af1f98cbf\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -703,7 +703,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_0e8b8d7e-4c2c-4914-86fe-702aec28d013 button.colab-df-generate');\n",
+              "        document.querySelector('#id_c1d4638e-b61a-4c38-8067-6b1af1f98cbf button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -767,13 +767,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uf2ytzXzZqgp",
-        "outputId": "1ac35ffa-d737-4cdd-82e4-80f3ecef94de"
+        "outputId": "0ef2527e-c64a-410f-b29b-ddfb2270c7bb"
       },
       "outputs": [
         {
@@ -811,14 +811,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 449
         },
         "id": "z9d8CKYAYe6X",
-        "outputId": "adce8183-5c05-4baa-e288-832af37e9d1e"
+        "outputId": "fefda19e-bdfc-4b07-eeac-33e0703780fc"
       },
       "outputs": [
         {
@@ -878,14 +878,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 410
         },
         "id": "vDAZZaL8W6X0",
-        "outputId": "c3f8db91-6efb-496a-a3d2-59a69840d4bc"
+        "outputId": "c0a7cd3d-449c-4a17-a08f-263363cf2875"
       },
       "outputs": [
         {
@@ -932,7 +932,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Mostriamo una parte di un campione qualsiasi\n",
+        "#@title Mostriamo la parte rumorosa presente alla fine di ogni campione\n",
         "#@markdown Inserisci il numero del volontario (1-109):\n",
         "volontario = 25 #@param {type:\"integer\"}\n",
         "#@markdown Inserisci il range di canali da visualizzare (1-64):\n",
@@ -970,9 +970,9 @@
           "height": 410
         },
         "id": "FbY0Eq4KVhkE",
-        "outputId": "32a7d6ec-a230-4b64-d93d-3d55a666d809"
+        "outputId": "23ac8529-ab59-4c6d-f778-2770c63ab6d7"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2498,6 +2498,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Il suguente grafico rende visibile l'azione eseguita dal filtro Notch"
+      ],
+      "metadata": {
+        "id": "LAGXTa1G8gQC"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -2520,8 +2529,6 @@
         }
       ],
       "source": [
-        "#@title Valutazione della Coerenza delle Frequenze nel Dataset tramite la PSD media per canale\n",
-        "\n",
         "# Calcola la media della PSD\n",
         "psd_media = psd_totale / numero_classi\n",
         "\n",
